--- a/docs/HISTORY
+++ b/docs/HISTORY
@@ -3,6 +3,15 @@ Change Log
 ================================================================================
 
 --------------------------------------------------------------------------------
+0.4.1 (2011-08-16)
+--------------------------------------------------------------------------------
+
+- General
+    - Disabled default values, they were causing complications with data entry.
+    - Fixed: base_schema not being imported correctly.
+    
+     
+--------------------------------------------------------------------------------
 0.4.0 (2011-07-29)
 --------------------------------------------------------------------------------
 
