--- a/docs/HISTORY
+++ b/docs/HISTORY
@@ -3,6 +3,13 @@ Change Log
 ================================================================================
 
 --------------------------------------------------------------------------------
+0.4.2 (????)
+--------------------------------------------------------------------------------
+
+- General
+    - Added patch to return ONDELETE CASCADES to entity references.
+
+--------------------------------------------------------------------------------
 0.4.1 (2011-08-16)
 --------------------------------------------------------------------------------
 
