--- a/docs/HISTORY
+++ b/docs/HISTORY
@@ -3,11 +3,11 @@ Change Log
 ================================================================================
 
 --------------------------------------------------------------------------------
-0.4.2 (????)
+0.4.2 (2011-08-25)
 --------------------------------------------------------------------------------
 
 - General
-    - Added patch to return ONDELETE CASCADES to entity references.
+    - Fixed ON DELETE settings for value tables to cascade properly.
 
 --------------------------------------------------------------------------------
 0.4.1 (2011-08-16)
